Add headless processor, README and JavaFX headless support